force-app/main/default/objects/PurchasePlanResult__c/PurchasePlanResult__c.object-meta.xml
<CustomObject>
    <label>Purchase Plan Result</label>
    <pluralLabel>Purchase Plan Results</pluralLabel>
    <nameField>
        <displayFormat>PR{YY}{MM}{DD}{0000}</displayFormat>
        <label>PP Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>