force-app/main/default/objects/PurchasePlanResult__c/fields/IsSelected__c.field-meta.xml
<CustomField>
    <fullName>IsSelected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Selected</label>
    <type>Checkbox</type>
</CustomField>