force-app/main/default/objects/PurchasePlanResult__c/fields/PurchasePlanId__c.field-meta.xml
<CustomField>
    <fullName>PurchasePlanId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Purchase Plan</label>
    <referenceTo>PurchasePlan__c</referenceTo>
    <relationshipLabel>Purchase Plan Result</relationshipLabel>
    <relationshipName>RFX1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>