force-app/main/default/objects/PurchasePlanResult__c/fields/PurchasePlanItemId__c.field-meta.xml
<CustomField>
    <fullName>PurchasePlanItemId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>PP Item</label>
    <referenceTo>PurchasePlanLineItem__c</referenceTo>
    <relationshipLabel>Purchase Plan Result</relationshipLabel>
    <relationshipName>RFX</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>