force-app/main/default/objects/PurchasePlanResult__c/fields/PurchasePlanSupplierId__c.field-meta.xml
<CustomField>
    <fullName>PurchasePlanSupplierId__c</fullName>
    <label>PP Supplier</label>
    <referenceTo>PurchasePlanSupplier__c</referenceTo>
    <relationshipLabel>Purchase Plan Result</relationshipLabel>
    <relationshipName>PurchasePlanResults</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>