force-app/main/default/objects/PurchasePlanResult__c/fields/QuotationAmount__c.field-meta.xml
<CustomField>
    <fullName>QuotationAmount__c</fullName>
    <formula>Quantity__c * QuotationPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuotationAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>