force-app/main/default/objects/PurchasePlanResult__c/fields/QuotationDate__c.field-meta.xml
<CustomField>
    <fullName>QuotationDate__c</fullName>
    <label>QuotationDate</label>
    <type>Date</type>
</CustomField>