force-app/main/default/objects/PurchasePlanResult__c/fields/QuotationNumber__c.field-meta.xml
<CustomField>
    <fullName>QuotationNumber__c</fullName>
    <label>QuotationNumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>