force-app/main/default/objects/PurchasePlanResult__c/fields/QuotationPrice__c.field-meta.xml
<CustomField>
    <fullName>QuotationPrice__c</fullName>
    <label>QuotationPrice</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>