force-app/main/default/objects/PurchasePlanResult__c/fields/Round__c.field-meta.xml
<CustomField>
    <fullName>Round__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Round</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>