force-app/main/default/objects/PurchasePlanResult__c/fields/SelectedAmount__c.field-meta.xml
<CustomField>
    <fullName>SelectedAmount__c</fullName>
    <formula>SelectedQuantity__c *  QuotationPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Selected Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>