force-app/main/default/objects/PurchasePlanResult__c/fields/SelectedQuantity__c.field-meta.xml
<CustomField>
    <fullName>SelectedQuantity__c</fullName>
    <label>Selected Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>