force-app/main/default/objects/PurchasePlanResult__c/fields/SubmitDate__c.field-meta.xml
<CustomField>
    <fullName>SubmitDate__c</fullName>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>