force-app/main/default/objects/PurchasePlanResult__c/fields/SupplierId__c.field-meta.xml
<CustomField>
    <fullName>SupplierId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Supplier__c</referenceTo>
    <relationshipLabel>Purchase Plan Result</relationshipLabel>
    <relationshipName>RFX1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>